# coverage_layer

./: CMakeLists.txt  costmap_plugins.xml  package.xml
include/coverage/: coverage.h
include/coverage_layer/: coverage_layer.h
launch/: debug.launch  no_debug.launch
params/: costmap_common_params.yaml  global_costmap_params.yaml
src/: coverage.cpp  coverage_layer.cpp  coverage_node.cpp
